--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "license": "MIT",
   "homepage": "https://github.com/krider2010/slack-bot-action",
   "dependencies": {
+    "@actions/core": "1.1.3",
+    "@actions/github": "1.1.0",
     "@slack/web-api": "5.0.1",
-    "actions-toolkit": "^2.0.0",
-    "fs-extra": "7.0.1",
-    "path": "0.12.7"
+    "actions-toolkit": "^2.0.0"
   },
   "devDependencies": {
     "jest": "^24.5.0",
